Начал работать с корзиной
